--- a/stylesheets/signup.css
+++ b/stylesheets/signup.css
@@ -8,16 +8,22 @@
   box-shadow: 0 0 16px var(--dark-slate-grey);
 }
 
+.signup.success {
+  max-width: 504px;
+}
+
 .signup__form {
   display: flex;
   flex-direction: column;
   padding: 36px 24px 40px 24px;
 }
 
-.form__header {
+.form__header,
+.success__header {
   font-size: 40px;
+  line-height: 1;
   letter-spacing: -0.07692307692307693px;
-  margin-bottom: 19px;
+  margin-bottom: 24px;
 }
 
 .form__list-header {
@@ -53,7 +59,13 @@
 .form__input-label-wrapper {
   font-size: 12px;
   font-weight: var(--font-weight-bold);
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 8px;
+}
+
+.form__error-message {
+  color: var(--tomato);
 }
 
 .form__input {
@@ -66,17 +78,28 @@
   outline: none;
 }
 
+.form__input.invalid,
+.form__input.invalid:hover,
+.form__input.invalid:focus {
+  color: var(--tomato);
+  background-color: #ffe8e6;
+  border-color: var(--tomato);
+}
+
 .form__input:hover,
 .form__input:focus {
   border-color: var(--dark-slate-grey);
 }
 
 .form__submit-button,
-.form__submit-button::before {
+.form__submit-button::before,
+.success__dismiss-button,
+.success__dismiss-button::before {
   transition: opacity 0.15s ease-in-out;
 }
 
-.form__submit-button {
+.form__submit-button,
+.success__dismiss-button {
   position: relative;
   font-weight: var(--font-weight-bold);
   color: var(--white);
@@ -89,15 +112,13 @@
   overflow: hidden;
 }
 
-.form__submit-button:focus {
-  outline: 2px solid blue;
-}
-
-.form__submit-button:active {
+.form__submit-button:active,
+.success__dismiss-button:active {
   opacity: 0.85;
 }
 
-.form__submit-button::before {
+.form__submit-button::before,
+.success__dismiss-button::before {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -109,11 +130,14 @@
 }
 
 .form__submit-button:hover::before,
-.form__submit-button:focus::before {
+.form__submit-button:focus::before,
+.success__dismiss-button:hover::before,
+.success__dismiss-button:focus::before  {
   opacity: 0;
 }
 
-.form__submit-button > * {
+.form__submit-button > *,
+.success__dismiss-button > * {
   position: relative;
   top: 1px;
   z-index: 2;
@@ -128,6 +152,8 @@
   height: 100%;
 }
 
+.signup__form.hidden,
+.signup__decorative-images.hidden,
 .decorative-images__mobile,
 .decorative-images__desktop,
 .signup__success {
@@ -145,6 +171,28 @@
   width: 100%;
 }
 
+.signup__success.visible {
+  position: initial;
+  z-index: 1;
+  pointer-events: all;
+  visibility: visible;
+  width: 100%;
+  padding: 24px 40px 40px 40px;
+}
+
+.success__icon {
+  width: 64px;
+  margin-bottom: 45.5px;
+}
+
+.message__important {
+  font-weight: var(--font-weight-bold);
+}
+
+.success__dismiss-button {
+  margin-top: 40px;
+}
+
 @media (min-width: 400px) {
   .signup {
     border-radius: 16px;
@@ -160,6 +208,10 @@
     max-width: 928px;
     padding: 24px;
     margin: 24px;
+  }
+
+  .signup.success {
+    top: 0;
   }
 
   .signup__form {
@@ -193,7 +245,8 @@
     padding-right: 64px;
   }
 
-  .form__header {
+  .form__header,
+  .success__header {
     font-size: 56px;
     margin-top: -6px;
   }
